# NAAA-No-Afterlife-At-All-

./: .gitignore  CMakeLists.txt  README.md
Assets/: JEMINA vase -up.cmo  TileOBJ.cmo  TileOBJ2.cmo  _Program Files (x86)_Microsoft Visual Studio_2019_Community_Common7_IDE_Extensions_Microsoft_VsGraphics_Assets_Effects_Lambert.dgsl.cso  _Program Files (x86)_Microsoft Visual Studio_2019_Community_Common7_IDE_Extensions_Microsoft_VsGraphics_Assets_Effects_Phong.dgsl.cso  _Program Files (x86)_Microsoft Visual Studio_2019_Professional_Common7_IDE_Extensions_Microsoft_VsGraphics_Assets_Effects_Lambert.dgsl.cso  _Program Files (x86)_Microsoft Visual Studio_2019_Professional_Common7_IDE_Extensions_Microsoft_VsGraphics_Assets_Effects_Phong.dgsl.cso  _Program Files_Microsoft Visual Studio_2022_Professional_Common7_IDE_Extensions_Microsoft_VsGraphics_Assets_Effects_Lambert.dgsl.cso  _Program Files_Microsoft Visual Studio_2022_Professional_Common7_IDE_Extensions_Microsoft_VsGraphics_Assets_Effects_Phong.dgsl.cso  advisor-window.dds  angel-advisor-Sheet.dds  close-button.dds  cursor.dds  devil-advisor-Sheet.dds  table.cmo
Data/: SaveFile.json  buildings_table.json  buttons_details.json  keybinds_custom.json  keybinds_default.json  option_buttons.json  remote_buttons.json  save.json  souls_name.json
Direct3D_Win32/: Direct3D_Win32.vcxproj  Main.cpp
DirectXTK/: DirectXTK_Desktop_2019_Win10.vcxproj
DirectXTK/Audio/: DirectXTKAudio_Desktop_2019_Win8.vcxproj
DirectXTK/MakeSpriteFont/: MakeSpriteFont.csproj
DirectXTK/Src/: Mouse.cpp
DirectXTK/Src/Shaders/Compiled/: AlphaTestEffect_PSAlphaTestEqNe.inc  AlphaTestEffect_PSAlphaTestEqNeNoFog.inc  AlphaTestEffect_PSAlphaTestLtGt.inc  AlphaTestEffect_PSAlphaTestLtGtNoFog.inc  AlphaTestEffect_VSAlphaTest.inc  AlphaTestEffect_VSAlphaTestNoFog.inc  AlphaTestEffect_VSAlphaTestVc.inc  AlphaTestEffect_VSAlphaTestVcNoFog.inc  BasicEffect_PSBasic.inc  BasicEffect_PSBasicNoFog.inc  BasicEffect_PSBasicPixelLighting.inc  BasicEffect_PSBasicPixelLightingTx.inc  BasicEffect_PSBasicTx.inc  BasicEffect_PSBasicTxNoFog.inc  BasicEffect_PSBasicVertexLighting.inc  BasicEffect_PSBasicVertexLightingNoFog.inc  BasicEffect_PSBasicVertexLightingTx.inc  BasicEffect_PSBasicVertexLightingTxNoFog.inc  BasicEffect_VSBasic.inc  BasicEffect_VSBasicNoFog.inc  BasicEffect_VSBasicOneLight.inc  BasicEffect_VSBasicOneLightBn.inc  BasicEffect_VSBasicOneLightTx.inc  BasicEffect_VSBasicOneLightTxBn.inc  BasicEffect_VSBasicOneLightTxVc.inc  BasicEffect_VSBasicOneLightTxVcBn.inc  BasicEffect_VSBasicOneLightVc.inc  BasicEffect_VSBasicOneLightVcBn.inc  BasicEffect_VSBasicPixelLighting.inc  BasicEffect_VSBasicPixelLightingBn.inc  BasicEffect_VSBasicPixelLightingTx.inc  BasicEffect_VSBasicPixelLightingTxBn.inc  BasicEffect_VSBasicPixelLightingTxVc.inc  BasicEffect_VSBasicPixelLightingTxVcBn.inc  BasicEffect_VSBasicPixelLightingVc.inc  BasicEffect_VSBasicPixelLightingVcBn.inc  BasicEffect_VSBasicTx.inc  BasicEffect_VSBasicTxNoFog.inc  BasicEffect_VSBasicTxVc.inc  BasicEffect_VSBasicTxVcNoFog.inc  (+81 more)
DirectXTK/XWBTool/: xwbtool_Desktop_2019.vcxproj
Game/: AdvisorWindow.cpp  AdvisorWindow.h  AnimatedImageGO2D.cpp  AnimatedImageGO2D.h  Animation.cpp  Animation.h  BadThings.cpp  BadThings.h  BadThingsManager.cpp  BadThingsManager.h  BaseAnimateWindow.cpp  BaseAnimateWindow.h  Building.cpp  Building.h  BuildingButton.cpp  BuildingButton.h  BuildingData.h  BuildingSpecies.h  BuildingWindow.cpp  BuildingWindow.h  Button.cpp  Button.h  ButtonOpenBW.cpp  ButtonOpenBW.h  ButtonSelectBW.cpp  ButtonSelectBW.h  ButtonToggleWindow.cpp  ButtonToggleWindow.h  CMOGO.cpp  CMOGO.h  Capacity.h  Component.cpp  Component.h  ConstantBuffer.h  ControlTypeHandler.cpp  ControlTypeHandler.h  CursorController.cpp  CursorController.h  DataGenerator.cpp  DataGenerator.h  (+121 more)
Game/BadThings/: BadThingsBOP.cpp  BadThingsBOP.h  BadThingsParent.cpp  BadThingsParent.h
Models/: Models.vcxproj  mug_text.txt  terrainTexT.txt
Models/Tile/: TileFBX.fbx  TileFBX2.fbx  TileOBJ.mtl
Sounds/: Sounds.vcxproj
Textures/: Textures.vcxproj  Textures.vcxproj.filters  cursor.dds
